Finish Item Form.

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -6,4 +6,6 @@
         <item quantity="one">Every %1$d year</item>
         <item quantity="other">Every %1$d years</item>
     </plurals>
+    <string name="title_activity_item_details">ItemDetailsActivity</string>
+    <string name="item_details">Item Details</string>
 </resources>
