--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,4 +1,4 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">Maintenance</string>
     <string name="maintenance_date">Last maintenance on %1$s</string>
     <string name="delayed_days">Maintenance delayed for %1$s</string>
@@ -22,7 +22,7 @@
         <item quantity="one">%1$d day</item>
         <item quantity="other">%1$d days</item>
     </plurals>
-    <string name="months_periodicity">Every %1$d months</string>
+    <string name="months_periodicity" tools:ignore="PluralsCandidate">Every %1$d months</string>
     <string name="title_activity_item_details">ItemDetailsActivity</string>
     <string name="item_details">Item Details</string>
     <string name="channel_name">Items that need maintenance</string>
@@ -30,4 +30,10 @@
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
     <string name="last_maintenance">Last Maintenance</string>
+    <string name="authentication_failed">Authentication failed</string>
+    <string name="login">Login</string>
+    <string name="email">Email</string>
+    <string name="password">Password</string>
+    <string name="icon_password_visible">Password Visible</string>
+    <string name="icon_password_hidden">Password Hidden</string>
 </resources>
